k8s-training/exo5/db-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      name: db-pod
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: mysql:5.7
---

apiVersion: v1
kind: Service
metadata:
  name: db-srv
spec:
  selector:
    app: db
  ports:
    - name: db
      protocol: TCP
      port: 3306
      targetPort: 3306
