k8s-training/exo5/web-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      name: web-pod
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: amesika/exo3

---

apiVersion: v1
kind: Service
metadata:
  name: web-srv
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 5000
      targetPort: 5000  
      nodePort: 30006
