k8s-training/exo5/ingress-srv.yaml
# Le composant ingress offre un endoint unique pour le client
# et permet d'analyser l'url requise par le client
# afin de rediriger le trafic sur un service cible
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-exo3-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: exo3.com # ne peut pas être localhost
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: web-srv
            port:
              number: 5000
